Resolve alignment & Icon is not clickable issue

--- a/raaghu-elements/src/rds-datepicker/rds-datepicker.css
+++ b/raaghu-elements/src/rds-datepicker/rds-datepicker.css
@@ -30,3 +30,7 @@
   border-bottom-right-radius: 0.3rem;
   border-bottom-left-radius: 0.3rem;
 }
+
+.react-datepicker__navigation {
+  top: 8px;
+}
